<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.calculator.TitleFragment"
        android:label="@string/title_nav_message"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.calculator.QuestionFragment"
        android:label="@string/question_nav_message"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_questionFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.calculator.ResultFragment"
        android:label="@string/result_nav_message"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_resultFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
</navigation>